--- a/StaffingSolution/Properties/AndroidManifest.xml
+++ b/StaffingSolution/Properties/AndroidManifest.xml
@@ -4,7 +4,16 @@
           android:versionName="1.0" 
           package="com.companyname.staffingsolution">
   <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
-  <application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/AppTheme">
+  <application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true">
+      <provider android:name="android.support.v4.content.FileProvider" 
+                    android:authorities="com.companyname.staffingsolution.fileprovider" 
+                    android:exported="false" 
+                    android:grantUriPermissions="true">
+      
+        <meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths"></meta-data>
+    </provider>
   </application>
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+  
 </manifest>
